[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/components/filtered_hint_list/filtered_hint_list.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.878431, 0.878431, 1 )
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.247059, 0.247059, 0.247059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_detail = 1

[node name="filtered_hint_list" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="filter" type="LineEdit" parent="."]
margin_right = 360.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
placeholder_text = "Type to filter..."
caret_blink = true
caret_blink_speed = 0.5

[node name="list" type="ItemList" parent="."]
margin_top = 16.0
margin_right = 360.0
margin_bottom = 672.0
focus_mode = 0
size_flags_vertical = 3

[node name="delay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="gui_input" from="filter" to="." method="_on_filter_gui_input"]
[connection signal="text_changed" from="filter" to="." method="_on_filter_text_changed"]
[connection signal="text_entered" from="filter" to="." method="_on_filter_text_entered"]
[connection signal="item_activated" from="list" to="." method="_on_list_item_activated"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
